src/App.css
@font-face {
    font-family: rais;
    src: url(./fonts/DemiBold.ttf);
}

#belly {
    z-index: 1;
    position: fixed;
    right: -40px;
    bottom: -10px;
    height: 24rem;
}

body {
    font-family: rais;
    font-size: 15px;
    background: url(./img/background.gif) no-repeat center center fixed;
    background-size: cover;
    background-color: black;
}

h1 {
    position: relative;
    z-index: 100;
    font-size: 3rem;
    z-index: 100;
    color: crimson;
}

.textBiggest {
    font-size: 25.35px;
}

.textMedium {
    font-size: 19.5;
}

.textSmallest {
    font-size: 15px;
}

a {
    z-index: 100;
    color: black;
    text-decoration: none;
    padding: .4rem;
    font-size: 19.5px;
}

a:hover {
    text-decoration: underline;
}

ul {
    z-index: 100;
    list-style: lower-roman;
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
    #belly {
        z-index: 1;
        position: fixed;
        right: -75px;
        bottom: -10px;
        height: 16rem;
    }
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
#belly {
    z-index: 1;
    position: fixed;
    right: -40px;
    bottom: -10px;
    height: 24rem;
}
}

/* Back button - matches sound button style */
.back-btn-icon {
    z-index: 100;
    position: fixed;
    left: 0px;
    top: 0px;
    padding: 1.5rem;
    width: 25px;
    height: 25px;
    cursor: pointer;
    opacity: 0.8;
    transition: opacity 0.2s;
}

.back-btn-icon:hover {
    opacity: 1;
}

/* Sound/music button - matches back button style */
.sound-btn-icon {
    z-index: 100;
    position: fixed;
    left: 0px;
    bottom: 0px;
    padding: 1.5rem;
    width: 25px;
    height: 25px;
    cursor: pointer;
    opacity: 0.8;
    transition: opacity 0.2s;
}

.sound-btn-icon:hover {
    opacity: 1;
}

/* Text selection highlight */
::selection {
    background: #f5d742;
    color: #2c1810;
}

::-moz-selection {
    background: #f5d742;
    color: #2c1810;
}

